# LETW

./: .gitignore  Dockerfile  Documentación del código de LETW.docx  LICENSE  README.es.md  README.md  pyproject.toml  requirements.txt  winrequirements.txt
Automatization/: Array.txt  Name_Change.py  S_Tasks.py
Logs/train/: events.out.tfevents.1752189048.VICTUS.26212.0.v2  events.out.tfevents.1752886907.VICTUS.4732.0.v2  events.out.tfevents.1752887083.VICTUS.17060.0.v2  events.out.tfevents.1755299374.VICTUS.15788.0.v2  events.out.tfevents.1756950434.VICTUS.3496.0.v2  events.out.tfevents.1758741144.VICTUS.14068.0.v2  events.out.tfevents.1758741571.VICTUS.14068.2.v2  events.out.tfevents.1758742679.VICTUS.14068.4.v2  events.out.tfevents.1758744605.VICTUS.15684.0.v2
Logs/validation/: events.out.tfevents.1752189068.VICTUS.26212.1.v2  events.out.tfevents.1752887095.VICTUS.17060.1.v2  events.out.tfevents.1755299383.VICTUS.15788.1.v2  events.out.tfevents.1756950443.VICTUS.3496.1.v2  events.out.tfevents.1758741157.VICTUS.14068.1.v2  events.out.tfevents.1758741584.VICTUS.14068.3.v2  events.out.tfevents.1758742692.VICTUS.14068.5.v2  events.out.tfevents.1758744619.VICTUS.15684.1.v2
Model/Test/: App.py  DataExtraction.py  DataLabelling.py  ImageProcessor.py  KeypointExtractor.py  RealtimePrediction.py  SetUp.py  TrainingLSTM.py  Utilities.py  VideoBatchProcessor.py
Test/: App.py  Borrador.py  DataExtraction.py  DataLabelling.py  FrameTransformer.py  ImageProcessor.py  KeypointExtractor.py  LandmarkDrawer.py  TrainingLSTM.py  Utilities.py  VideoBatchProcessor.py  VideoLoader.py
