[project]
name = "letw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mediapipe==0.10.11",
    "numpy>=2.0.2",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.1",
    "tf-keras>=2.19.0",
]
[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
